; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_output.c_output_damage_from_view.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_output.c_output_damage_from_view.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_output = type { i32 }
%struct.sway_view = type { i32 }

@damage_surface_iterator = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @output_damage_from_view(%struct.sway_output* %0, %struct.sway_view* %1) #0 {
  %3 = alloca %struct.sway_output*, align 8
  %4 = alloca %struct.sway_view*, align 8
  %5 = alloca i32, align 4
  store %struct.sway_output* %0, %struct.sway_output** %3, align 8
  store %struct.sway_view* %1, %struct.sway_view** %4, align 8
  %6 = load %struct.sway_view*, %struct.sway_view** %4, align 8
  %7 = call i32 @view_is_visible(%struct.sway_view* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  br label %15

10:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  %11 = load %struct.sway_output*, %struct.sway_output** %3, align 8
  %12 = load %struct.sway_view*, %struct.sway_view** %4, align 8
  %13 = load i32, i32* @damage_surface_iterator, align 4
  %14 = call i32 @output_view_for_each_surface(%struct.sway_output* %11, %struct.sway_view* %12, i32 %13, i32* %5)
  br label %15

15:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @view_is_visible(%struct.sway_view*) #1

declare dso_local i32 @output_view_for_each_surface(%struct.sway_output*, %struct.sway_view*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
